syntax = "proto3";

package nis.v1;

option go_package = "github.com/thomas-maurice/nis/gen/nis/v1;nisv1";

import "google/protobuf/timestamp.proto";

// ListOptions specifies pagination parameters for list operations
message ListOptions {
  int32 limit = 1;
  int32 offset = 2;
}

// Error represents a standard error response
message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// JetStreamLimits represents JetStream resource limits for an account
message JetStreamLimits {
  bool enabled = 1;
  int64 max_memory = 2;
  int64 max_storage = 3;
  int32 max_streams = 4;
  int32 max_consumers = 5;
  int64 max_ack_pending = 6;
  int64 max_memory_stream = 7;
  int64 max_storage_stream = 8;
  int64 max_bytes_required = 9;
}

// UserPermissions represents publish/subscribe permissions for a user
message UserPermissions {
  repeated string pub_allow = 1;
  repeated string pub_deny = 2;
  repeated string sub_allow = 3;
  repeated string sub_deny = 4;
}

// ResponsePermission represents response permission configuration
message ResponsePermission {
  int32 max_msgs = 1;
  int64 expires = 2; // nanoseconds
}

// Metadata contains common entity metadata
message Metadata {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}
